카드 생성/조회 기능 수정